spacing in pagoda section fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,9 @@ body {
     background-color: #fafafa;
 }
 
+p{
+    text-align: left;
+}
 .section-break {
     margin: 5rem 0;
     border-top: 1px solid rgb(51,204,204);
